@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-17-21
+DATE: 12/01/2021
+STAFF: lec
+wts2-735/WF_AP_Discard obsolete/removed
+
 TAG: qcreports_db-6-0-17-20
 DATE: 11/30/2021
 STAFF: dbm
